--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-/* Reset some basic styles for consistency across browsers */
+
 *,
 *::before,
 *::after {
@@ -7,12 +7,12 @@
   box-sizing: border-box;
 }
 
-/* Body styling */
+
 body {
   font-family: Arial, sans-serif;
   line-height: 1.6;
   color: #333;
-  background-color: #f4f4f9;
+  background-color:cadetblue;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,7 +20,6 @@ body {
   padding: 20px;
 }
 
-/* Links */
 a {
   color: #0070f3;
   text-decoration: none;
