--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -104,7 +104,24 @@
   font-size: 1.2rem;
   font-style: italic;
 }
+/* home.module.css */
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+}
 
+.logoContainer {
+  margin-bottom: 20px;
+}
+.logo {
+  width: 100px;
+  height: auto;
+  border-radius: 10px;
+  object-fit: cover;
+  filter: brightness(0) invert(1); /* Adjust logo to blend with dark background */
+}
 /* Animation for fade-in effect */
 @keyframes fadeIn {
   0% {
