--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -22,7 +22,7 @@
   height: auto;
   border-radius: 10px;
   object-fit: cover;
-  filter: brightness(0) invert(1); /* Adjust logo to blend with dark sidebar */
+  filter: brightness(0) invert(1); 
 }
 
 .sidebar h3 {
