--- a/styles/Sidebar.module.css
+++ b/styles/Sidebar.module.css
@@ -35,8 +35,9 @@
 }
 
 .sidebar ul {
-  list-style-type: none;
+  list-style-type:circle;
   padding: 0;
+  padding-right: 25px;
 }
 
 .sidebar li {
@@ -51,5 +52,5 @@
 }
 
 .sidebar a:hover {
-  color: #18BC9C;
+  color: #4561a7;
 }
