--- a/styles/ login.module.css
+++ b/styles/ login.module.css
@@ -6,8 +6,8 @@
   justify-content: center;
   padding: 100px 20px;
   min-height: 100vh;
-  background: #f0f1f6;
-  background-image: linear-gradient(135deg, #e8f8fe, #f3e5f5);
+  
+
 }
 
 .heading {
@@ -77,7 +77,7 @@
 
 .redirectButton {
   background-color: transparent;
-  color:#4a90e2;
+  color:rgb(168, 214, 168);
   font-size: 1.1rem;
   font-weight: 600;
   border: none;
@@ -99,6 +99,12 @@
 }
 .passwordContainer {
   position: relative;
+  width: 100%;
+}
+
+.inputField {
+  width: 100%;
+  padding-right: 40px; /* Ensure space for the icon */
 }
 
 .eyeIcon {
@@ -106,5 +112,25 @@
   right: 10px;
   top: 50%;
   transform: translateY(-50%);
+  font-size: 1.5rem;
+  color: #aaa;
   cursor: pointer;
+  user-select: none; /* Prevent accidental selection */
+}
+
+.eyeIcon:hover {
+  color: #555;
+}
+.buttonSecondary {
+  background-color: #bdd7e3;
+  color: #333;
+  border: 1px solid #ccc;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 1rem;
+  cursor: pointer;
+}
+
+.buttonSecondary:hover {
+  background-color: #91abc6;
 }
