--- a/styles/dashboard.module.css
+++ b/styles/dashboard.module.css
@@ -5,7 +5,7 @@
     align-items: center;
     margin-top: 40px;
     padding: 20px;
-    background-color: #f9fafb;
+    background-color:whitesmoke;
     height: 100vh;
     font-family: 'Roboto', sans-serif;
   }
@@ -50,7 +50,7 @@
   
   .statCard h3 {
     font-size: 1.4rem;
-    color: #4caf50;
+    color: #253e49;
     margin-bottom: 10px;
   }
   
@@ -69,7 +69,7 @@
   
   .chartCard {
     width: 100%;
-    max-width: 800px;
+    max-width: 1200px;
     background-color: #fff;
     padding: 30px;
     text-align: center;
