--- a/styles/task.module.css
+++ b/styles/task.module.css
@@ -18,11 +18,58 @@
   color: white;
   box-shadow: 4px 0 10px rgba(0, 0, 0, 0.1);
 }
+/* Modal Styles */
+.categoryModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+.categoryButton {
+  padding: 10px;
+  background-color: #2980b9;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.categoryButton:hover {
+  background-color: #3498db;
+}
+
+.modalContent {
+  background-color: white;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.modalContent button {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #2980b9;
+  color: white;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.modalContent button:hover {
+  background-color: #1f5f8a;
+}
 
 .mainContent {
   margin-left: 250px;
   padding: 30px;
-  background-color: white;
+  
   overflow-y: auto;
   width: calc(100% - 250px);
   max-width: 100%;
